fix overflow on mobile; improve about me section layout on tablet

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,6 +12,11 @@
     overflow: hidden;
   } */
 
+  body > div {
+    overflow-x: hidden;
+    overflow-y: hidden;
+  }
+
   dialog.modal::backdrop {
     background-color: rgba(0, 0, 0, 0.65);
   }
